2020-03-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/gattrib.c: Revise main to replace gtk_main with g_main_loop_run.
      Eliminate calling gtk_main_quit in gattrib_quit. Revise gattrib_quit
      to not exit with a return code and return nothing.

2019-12-31 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_table.c: Rename STRING_LIST pointer list_element iter in
      s_table_get_index.

2019-12-14 Wiley E. Hill <wileyhill@gmail.com>

    * po/ca.po: Update Catalan translations.
    * po/oc.po: Update Occitan translations.
    * po/tr.po: Update Turkish translations.
    * po/uk.po: Update Ukrainian translations.
    * po/zh_CN.po: Update Chinese simplified translations.
    * po/zh_TW.po: Update Chinese traditional translations.

2019-12-13 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_dialog.c: Reverse the buttons on the "new attribute" dialog so
      that the Okay button is on the right side and set alternative button
      order. Replace gtk_widget_show_all with gtk_widget_show.

    * src/s_string_list: Revise s_string_list_in_list to checks for NULL
      string inside the loop instead of only checking the first item.

2019-12-11 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_string_list.c: Replace strcmp with geda_stricmp in function
      s_string_list_in_list so that checks for attribute names are case
      insenitive.

2019-12-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheetcolumn.c: Revise gtk_sheet_column_set_property;
      remove the "or not g_object" conditions. If the sheet was null then
      gtk_sheet_column_get_index would return for -1 for col AND if is not
      a g_object then the "!gtk_widget_get_realized" condition will always
      be true, albeit with noise.

    * src/s_toplevel.c: Translate unknown page error in s_toplevel_gtksheet_
      to_toplevel attempt to duplicate attribute name message in s_toplevel_
      add_new_attrib and revise s_toplevel_add_new_attrib documentation to